update image source

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
 
     <!--Foodtastrophe logo-->
-    <a class="navbar-brand" href="index.html"> <img src="/Images/Foodtastrophe.svg" alt="Foodtastrophe Logo"
-        class="foodtastraphe"></a>
+    <a class="navbar-brand" href="index.html"> <img src="/Foodtastrophe/Images/Foodtastrophe.svg"
+        alt="Foodtastrophe Logo" class="foodtastraphe"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -43,7 +43,7 @@
       <!--My logo that leads to my linkedin.-->
 
       <a class="navbar-brand" href="https://www.linkedin.com/in/bennyvazquez/"> <img
-          src="/Images/UchihaSymbolNoBackground.svg" alt="Uchiha Logo" class="MyLogo"></a>
+          src="/Foodtastrophe/Images/UchihaSymbolNoBackground.svg" alt="Uchiha Logo" class="MyLogo"></a>
     </div>
   </nav>
 
@@ -165,15 +165,15 @@
       <h2 class="foodTitles">American!</h2>
       <button id="american" class="foodType" type="button" class="btn btn-secondary foodType" data-toggle="tooltip"
         data-placement="right" title="Picks a random restuarant based on your current filters!"
-        style="border-radius: 50%; width: 75%; height: 25%;" value="American"> <img src="/Images/american.jpg"
-          width="100%" height="100%" style="border-radius: 50%;">
+        style="border-radius: 50%; width: 75%; height: 25%;" value="American"> <img
+          src="/Foodtastrophe/Images/american.jpg" width="100%" height="100%" style="border-radius: 50%;">
       </button>
       <!--Asian Button-->
       <h2 class="foodTitles">Asian!</h2>
       <button id="asian" type="button" class="btn btn-secondary foodType" data-toggle="tooltip" data-placement="right"
         title="Picks a random restuarant based on your current filters!"
         style="border-radius: 50%; width: 75%; height: 25%;" value="Asian">
-        <img src="/Images/asian.jpeg" width="100%" height="100%" style="border-radius: 50%;">
+        <img src="/Foodtastrophe/Images/asian.jpeg" width="100%" height="100%" style="border-radius: 50%;">
       </button>
 
       <!--Breakfast Button-->
@@ -181,28 +181,28 @@
       <button id="breakfast" type="button" class="btn btn-secondary foodType" data-toggle="tooltip"
         data-placement="right" title="Picks a random restuarant based on your current filters!"
         style="border-radius: 50%; width: 75%; height: 25%;" value="Breakfast">
-        <img src="/Images/breakfast.jpg" width="100%" height="100%" style="border-radius: 50%;">
+        <img src="/Foodtastrophe/Images/breakfast.jpg" width="100%" height="100%" style="border-radius: 50%;">
       </button>
       <!--Fast Food Button-->
       <h2 class="foodTitles">Fast Food!</h2>
       <button id="fastfood" type="button" class="btn btn-secondary foodType" data-toggle="tooltip"
         data-placement="right" title="Picks a random restuarant based on your current filters!"
         style="border-radius: 50%; width: 75%; height: 25%;" value="Fast Food">
-        <img src="/Images/fastfood.jpg" width="100%" height="100%" style="border-radius: 50%;">
+        <img src="/Foodtastrophe/Images/fastfood.jpg" width="100%" height="100%" style="border-radius: 50%;">
       </button>
       <!--Italian Button-->
       <h2 class="foodTitles">Italian!</h2>
       <button id="italian" type="button" class="btn btn-secondary foodType" data-toggle="tooltip" data-placement="right"
         title="Picks a random restuarant based on your current filters!"
         style="border-radius: 50%; width: 75%; height: 25%;" value="Italian">
-        <img src="/Images/italian.jpg" width="100%" height="100%" style="border-radius: 50%;">
+        <img src="/Foodtastrophe/Images/italian.jpg" width="100%" height="100%" style="border-radius: 50%;">
       </button>
       <!--Mexican Button-->
       <h2 class="foodTitles">Mexican!</h2>
       <button id="mexican" type="button" class="btn btn-secondary foodType" data-toggle="tooltip" data-placement="right"
         title="Picks a random restuarant based on your current filters!"
         style="border-radius: 50%; width: 75%; height: 25%;" value="Mexican">
-        <img src="/Images/mexican.jpg" width="100%" height="100%" style="border-radius: 50%;">
+        <img src="/Foodtastrophe/Images/mexican.jpg" width="100%" height="100%" style="border-radius: 50%;">
       </button>
 
 
